@@ -1,6 +1,8 @@
+2863 [AviSynth]             changed default value of "always use the included AviSynth" to enabled
+                            unload avisynthwrapper during startup detection to ensure that the portable build is used if required
 2862 [Xvid]                 improved workaround to be able to use Xvid in portable AviSynth mode
 2861 [OneClick]             fixed an out of bounds error. bug #919
-2860                        improved AviSynth detection
+2860 [AviSynth]             improved AviSynth detection
 2859 [x26x]                 flag a job as "error" if the number of frames of the input and output does not match
 2858 [Video Encoder]        removed input/output settings from the command line preview
 2857 [x265]                 replaced avs4x26x with ffmpeg
